@@ -16,17 +16,18 @@ public class ReversiTest {
     private Reversi rev = new Reversi();
 
     private String gameConfigDir = "./game_config/";
-    private Path gameAllAlpha = new File(gameConfigDir + "game_all_alpha.txt").toPath();
-    private Path gameAllNum = new File(gameConfigDir + "game_all_num.txt").toPath();
-    private Path gameAlmostComplete = new File(gameConfigDir + "game_almost_complete.txt").toPath();
-    private Path gameComplete = new File(gameConfigDir + "game_complete.txt").toPath();
+    private Path game8bInit = new File(gameConfigDir + "game_8_b_init.txt").toPath();
+    private Path game8wInit = new File(gameConfigDir + "game_8_w_init.txt").toPath();
+    private Path game10bInit = new File(gameConfigDir + "game_10_b_init.txt").toPath();
     private Path gameEmpty = new File(gameConfigDir + "game_empty.txt").toPath();
-    private Path gameFourLines = new File(gameConfigDir + "game_four_lines.txt").toPath();
-    private Path gameInitBStarts = new File(gameConfigDir + "game_init_b_starts.txt").toPath();
-    private Path gameInitWStarts = new File(gameConfigDir + "game_init_w_starts.txt").toPath();
-    private Path gameNoOnTurn = new File(gameConfigDir + "game_no_on_turn.txt").toPath();
-    private Path gameOneLine = new File(gameConfigDir + "game_one_line.txt").toPath();
     private Path gameNotExisting = new File(gameConfigDir + "game_not_existing.txt").toPath();
+    private Path gameFiveLines = new File(gameConfigDir + "game_five_lines.txt").toPath();
+    private Path gameAlpha = new File(gameConfigDir + "game_alpha.txt").toPath();
+    private Path gameNoSize = new File(gameConfigDir + "game_no_size.txt").toPath();
+    private Path gameNoOnTurn = new File(gameConfigDir + "game_no_on_turn.txt").toPath();
+    private Path gameNoTiles = new File(gameConfigDir + "game_no_tiles.txt").toPath();
+    private Path game8bComplete = new File(gameConfigDir + "game_8_b_complete.txt").toPath();
+    private Path game8bAlmostComplete = new File(gameConfigDir + "game_8_b_almost_complete.txt").toPath();
 
 
     // Player
@@ -39,43 +40,42 @@ public class ReversiTest {
     }
 
 
-    // Alpha
-
-    @Test
-    public void testAlphaValueOf() {
-        assertEquals("Value of Alpha A", Alpha.A, Alpha.valueOf("A"));
-        assertEquals("Value of Alpha B", Alpha.B, Alpha.valueOf("B"));
-        assertEquals("Value of Alpha C", Alpha.C, Alpha.valueOf("C"));
-        assertEquals("Value of Alpha D", Alpha.D, Alpha.valueOf("D"));
-        assertEquals("Value of Alpha E", Alpha.E, Alpha.valueOf("E"));
-        assertEquals("Value of Alpha F", Alpha.F, Alpha.valueOf("F"));
-        assertEquals("Value of Alpha G", Alpha.G, Alpha.valueOf("G"));
-        assertEquals("Value of Alpha H", Alpha.H, Alpha.valueOf("H"));
-    }
-
-
     // readGameConfig
 
     @Test
-    public void testReadGameConfigInit() {
+    public void testReadGameConfig8bInit() {
         Reversi game = rev;
-        String[] gameConfig = game.readGameConfig(gameInitBStarts);
+        String[] gameConfig = game.readGameConfig(game8bInit);
 
-        assertEquals("reading initial config file: lines number should be 3", 3, gameConfig.length);
-        assertEquals("1st line of initial config file", "B", gameConfig[0]);
-        assertEquals("2nd line of initial config file", "E4 D5", gameConfig[1]);
-        assertEquals("3rd line of initial config file", "D4 E5", gameConfig[2]);
+        assertEquals("reading initial config file: lines number should be 4", 4, gameConfig.length);
+        assertEquals("1st line of initial config file", "8", gameConfig[0]);
+        assertEquals("2nd line of initial config file", "B", gameConfig[1]);
+        assertEquals("3rd line of initial config file", "34 43", gameConfig[2]);
+        assertEquals("4th line of initial config file", "33 44", gameConfig[3]);
     }
 
     @Test
-    public void testReadGameConfigInitW() {
+    public void testReadGameConfig8wInit() {
         Reversi game = rev;
-        String[] gameConfig = game.readGameConfig(gameInitWStarts);
+        String[] gameConfig = game.readGameConfig(game8wInit);
 
-        assertEquals("reading initial config file: lines number should be 3", 3, gameConfig.length);
-        assertEquals("1st line of initial config file", "W", gameConfig[0]);
-        assertEquals("2nd line of initial config file", "E4 D5", gameConfig[1]);
-        assertEquals("3rd line of initial config file", "D4 E5", gameConfig[2]);
+        assertEquals("reading initial config file: lines number should be 4", 4, gameConfig.length);
+        assertEquals("1st line of initial config file", "8", gameConfig[0]);
+        assertEquals("2nd line of initial config file", "W", gameConfig[1]);
+        assertEquals("3rd line of initial config file", "34 43", gameConfig[2]);
+        assertEquals("4th line of initial config file", "33 44", gameConfig[3]);
+    }
+
+    @Test
+    public void testReadGameConfig10bInit() {
+        Reversi game = rev;
+        String[] gameConfig = game.readGameConfig(game10bInit);
+
+        assertEquals("reading initial config file: lines number should be 4", 4, gameConfig.length);
+        assertEquals("1st line of initial config file", "10", gameConfig[0]);
+        assertEquals("2nd line of initial config file", "B", gameConfig[1]);
+        assertEquals("3rd line of initial config file", "45 54", gameConfig[2]);
+        assertEquals("4th line of initial config file", "44 55", gameConfig[3]);
     }
 
     @Test
@@ -84,27 +84,6 @@ public class ReversiTest {
         String[] gameConfig = game.readGameConfig(gameEmpty);
 
         assertEquals("lines number of empty config file", 0, gameConfig.length);
-    }
-
-    @Test
-    public void testReadGameConfigOneLine() {
-        Reversi game = rev;
-        String[] gameConfig = game.readGameConfig(gameOneLine);
-
-        assertEquals("lines number of 1-line config file", 1, gameConfig.length);
-        assertEquals("1st line of 1-line config file", "E4 D5", gameConfig[0]);
-    }
-
-    @Test
-    public void testReadGameConfigFourLines() {
-        Reversi game = rev;
-        String[] gameConfig = game.readGameConfig(gameFourLines);
-
-        assertEquals(4, gameConfig.length);
-        assertEquals("B", gameConfig[0]);
-        assertEquals("E4 D5", gameConfig[1]);
-        assertEquals("D4 E5", gameConfig[2]);
-        assertEquals("E4 D5", gameConfig[3]);
     }
 
     @Test
@@ -117,7 +96,91 @@ public class ReversiTest {
     }
 
 
-    // isOnTurnInputCorrect
+    @Test
+    public void testReadGameConfigFiveLines() {
+        Reversi game = rev;
+        String[] gameConfig = game.readGameConfig(gameFiveLines);
+
+        assertEquals(5, gameConfig.length);
+        assertEquals("8", gameConfig[0]);
+        assertEquals("B", gameConfig[1]);
+        assertEquals("34 43", gameConfig[2]);
+        assertEquals("33 44", gameConfig[3]);
+        assertEquals("33 44", gameConfig[4]);
+    }
+
+    @Test
+    public void testReadGameConfigAlpha() {
+        Reversi game = rev;
+        String[] gameConfig = game.readGameConfig(gameAlpha);
+
+        assertEquals(4, gameConfig.length);
+        assertEquals("8", gameConfig[0]);
+        assertEquals("B", gameConfig[1]);
+        assertEquals("E4 D5", gameConfig[2]);
+        assertEquals("D4 E5", gameConfig[3]);
+    }
+
+    @Test
+    public void testReadGameConfigNoSize() {
+        Reversi game = rev;
+        String[] gameConfig = game.readGameConfig(gameNoSize);
+
+        assertEquals(3, gameConfig.length);
+        assertEquals("B", gameConfig[0]);
+        assertEquals("34 43", gameConfig[1]);
+        assertEquals("33 44", gameConfig[2]);
+    }
+
+    @Test
+    public void testReadGameConfigNoOnTurn() {
+        Reversi game = rev;
+        String[] gameConfig = game.readGameConfig(gameNoOnTurn);
+
+        assertEquals(3, gameConfig.length);
+        assertEquals("8", gameConfig[0]);
+        assertEquals("34 43", gameConfig[1]);
+        assertEquals("33 44", gameConfig[2]);
+    }
+
+    @Test
+    public void testReadGameConfigNoTiles() {
+        Reversi game = rev;
+        String[] gameConfig = game.readGameConfig(gameNoTiles);
+
+        assertEquals(2, gameConfig.length);
+        assertEquals("8", gameConfig[0]);
+        assertEquals("B", gameConfig[1]);
+    }
+
+
+    //setSize
+
+    @Test
+    public void testSetSize8() {
+        Reversi game = rev;
+        game.setSize("8");
+
+        assertEquals("set size 8", 8, game.size);
+    }
+
+    @Test
+    public void testSetSizeNeg8() {
+        Reversi game = rev;
+        game.setSize("-8");
+
+        assertEquals("set size -8", 0, game.size);
+    }
+
+    @Test
+    public void testSetSizeA() {
+        Reversi game = rev;
+        game.setSize("A");
+
+        assertEquals("set size A", 0, game.size);
+    }
+
+    // setOnTurnInputCorrect
 
     @Test
     public void testIsOnTurnInputCorrectB() {
@@ -198,6 +261,7 @@ public class ReversiTest {
     }
 
 
+
     // createPlayground
 
     @Test
@@ -211,68 +275,32 @@ public class ReversiTest {
     // isTileInputCorrect
 
     @Test
-    public void testTileInputA1() {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertTrue("tile input: A1", game.isTileInputCorrect("A1"));
+    public void testTileInput00() {
+        Reversi game = new Reversi(game8bInit);
+        assertTrue("tile input: 00", game.isTileInputCorrect("00"));
     }
 
     @Test
-    public void testTileInputAA() {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertFalse("tile input: AA", game.isTileInputCorrect("a1"));
-    }
-
-    @Test
-    public void testTileInput11() {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertFalse("tile input: AA", game.isTileInputCorrect("a1"));
-    }
-
-    @Test
-    public void testTileInputa1()  {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertFalse("tile input: a1", game.isTileInputCorrect("a1"));
-    }
-
-    @Test
-    public void testTileInput1A() {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertFalse("tile input: 1A", game.isTileInputCorrect("1A"));
-    }
-
-    @Test
-    public void testTileInputI1() {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertFalse("tile input: I1", game.isTileInputCorrect("I1"));
-    }
-
-    @Test
-    public void testTileInputA9() {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertFalse("tile input: A9", game.isTileInputCorrect("A9"));
-    }
-
-    @Test
-    public void testTileInputI9() {
-        Reversi game = new Reversi(gameInitBStarts);
-        assertFalse("tile input: I9", game.isTileInputCorrect("I9"));
+    public void testTileInputD3() {
+        Reversi game = new Reversi(game8bInit);
+        assertFalse("tile input: D3", game.isTileInputCorrect("D3"));
     }
 
 
     // setTile
 
     @Test
-    public void testSetTileA1() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("A1", Player.B);
+    public void testSetTile00() {
+        Reversi game = new Reversi(game8bInit);
+        game.setTile("00", Player.B);
 
-        assertEquals("set player B on tile A1", Player.B, getTile(game, Alpha.A, 1));
+        assertEquals("set player B on tile 00", Player.B, getTile(game, 0, 0));
     }
 
     @Test
-    public void testSetTileAA() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("AA", Player.B);
+    public void testSetTile80() {
+        Reversi game = new Reversi(game8bInit);
+        game.setTile("80", Player.B);
 
         Player[][] expectedPlayground = getInitPlayground();
         assertArrayEquals(expectedPlayground, game.playground);
@@ -280,9 +308,9 @@ public class ReversiTest {
     }
 
     @Test
-    public void testSetTile11() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("11", Player.B);
+    public void testSetTile08() {
+        Reversi game = new Reversi(game8bInit);
+        game.setTile("08", Player.B);
 
         Player[][] expectedPlayground = getInitPlayground();
         assertArrayEquals(expectedPlayground, game.playground);
@@ -290,49 +318,9 @@ public class ReversiTest {
     }
 
     @Test
-    public void testSetTilea1() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("a1", Player.B);
-
-        Player[][] expectedPlayground = getInitPlayground();
-        assertArrayEquals(expectedPlayground, game.playground);
-        assertEquals(Player.B, game.onTurn);
-    }
-
-    @Test
-    public void testSetTile1A() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("1A", Player.B);
-
-        Player[][] expectedPlayground = getInitPlayground();
-        assertArrayEquals(expectedPlayground, game.playground);
-        assertEquals(Player.B, game.onTurn);
-    }
-
-    @Test
-    public void testSetTileI1() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("I1", Player.B);
-
-        Player[][] expectedPlayground = getInitPlayground();
-        assertArrayEquals(expectedPlayground, game.playground);
-        assertEquals(Player.B, game.onTurn);
-    }
-
-    @Test
-    public void testSetTileA9() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("A9", Player.B);
-
-        Player[][] expectedPlayground = getInitPlayground();
-        assertArrayEquals(expectedPlayground, game.playground);
-        assertEquals(Player.B, game.onTurn);
-    }
-
-    @Test
-    public void testSetTileI9() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.setTile("I9", Player.B);
+    public void testSetTile88() {
+        Reversi game = new Reversi(game8bInit);
+        game.setTile("88", Player.B);
 
         Player[][] expectedPlayground = getInitPlayground();
         assertArrayEquals(expectedPlayground, game.playground);
@@ -343,15 +331,16 @@ public class ReversiTest {
     // fillPlayground
 
     @Test
-    public void testFillPlaygroundInit() {
-        String[] gameConfig = new String[] {"B", "E4 D5", "D4 E5"};
+    public void testFillPlayground8bInit() {
+        String[] gameConfig = new String[] {"8", "B", "34 43", "33 44"};
         Reversi game = getRevWithPlayground();
+        game.size = 8;
         game.fillPlayground(gameConfig);
 
-        assertEquals("fill playground with initial game config", Player.B, getTile(game, Alpha.E, 4));
-        assertEquals("fill playground with initial game config", Player.B, getTile(game, Alpha.D, 5));
-        assertEquals("fill playground with initial game config", Player.W, getTile(game, Alpha.D, 4));
-        assertEquals("fill playground with initial game config", Player.W, getTile(game, Alpha.E, 5));
+        assertEquals("fill playground with initial game config", Player.B, getTile(game, 3, 4));
+        assertEquals("fill playground with initial game config", Player.B, getTile(game, 4, 3));
+        assertEquals("fill playground with initial game config", Player.W, getTile(game, 3, 3));
+        assertEquals("fill playground with initial game config", Player.W, getTile(game, 4, 4));
     }
 
     @Test
@@ -374,8 +363,8 @@ public class ReversiTest {
     }
 
     @Test
-    public void testFillPlaygroundIncorrectConfig() {
-        String[] gameConfig = new String[] {"B", "AA BB", "CC DD"};
+    public void testFillPlaygroundNoOnTurn() {
+        String[] gameConfig = new String[] {"8", "34 43", "33 44"};
         Reversi game = getRevWithPlayground();
         game.fillPlayground(gameConfig);
 
@@ -387,20 +376,50 @@ public class ReversiTest {
     // initGame
 
     @Test
-    public void testInitGameInit() {
-        String[] gameConfig = new String[] {"B", "E4 D5", "D4 E5"};
+    public void testInitGame8bInit() {
+        String[] gameConfig = new String[] {"8", "B", "34 43", "33 44"};
         Reversi game = rev;
         game.initGame(gameConfig);
 
+        assertEquals("init playground on initial game config", 8, game.size);
         assertEquals("init playground on initial game config", Player.B, game.onTurn);
-        assertEquals("init playground on initial game config", Player.B, getTile(game, Alpha.E, 4));
-        assertEquals("init playground on initial game config", Player.B, getTile(game, Alpha.D, 5));
-        assertEquals("init playground on initial game config", Player.W, getTile(game, Alpha.D, 4));
-        assertEquals("init playground on initial game config", Player.W, getTile(game, Alpha.E, 5));
+        assertEquals("init playground on initial game config", Player.B, getTile(game, 3, 4));
+        assertEquals("init playground on initial game config", Player.B, getTile(game, 4, 3));
+        assertEquals("init playground on initial game config", Player.W, getTile(game, 3, 3));
+        assertEquals("init playground on initial game config", Player.W, getTile(game, 4, 4));
     }
 
     @Test
-    public void testInitGameNoLines() {
+    public void testInitGame8wInit() {
+        String[] gameConfig = new String[] {"8", "W", "34 43", "33 44"};
+        Reversi game = rev;
+        game.initGame(gameConfig);
+
+        assertEquals("init playground on initial game config", 8, game.size);
+        assertEquals("init playground on initial game config", Player.W, game.onTurn);
+        assertEquals("init playground on initial game config", Player.B, getTile(game, 3, 4));
+        assertEquals("init playground on initial game config", Player.B, getTile(game, 4, 3));
+        assertEquals("init playground on initial game config", Player.W, getTile(game, 3, 3));
+        assertEquals("init playground on initial game config", Player.W, getTile(game, 4, 4));
+    }
+
+    @Test
+    public void testInitGame10bInit() {
+        String[] gameConfig = new String[] {"10", "B", "45 54", "44 55"};
+        Reversi game = rev;
+        game.initGame(gameConfig);
+
+        assertEquals("init playground on initial game config", 10, game.size);
+        assertEquals("init playground on initial game config", Player.B, game.onTurn);
+        assertEquals("init playground on initial game config", Player.B, getTile(game, 4, 5));
+        assertEquals("init playground on initial game config", Player.B, getTile(game, 5, 4));
+        assertEquals("init playground on initial game config", Player.W, getTile(game, 4, 4));
+        assertEquals("init playground on initial game config", Player.W, getTile(game, 5, 5));
+    }
+
+
+    @Test
+    public void testInitGameEmpty() {
         String[] gameConfig = new String[] {};
         Reversi game = rev;
         game.initGame(gameConfig);
@@ -409,8 +428,8 @@ public class ReversiTest {
     }
 
     @Test
-    public void testInitGameOneLine() {
-        String[] gameConfig = new String[] {"E4 D5"};
+    public void testInitGameFiveLines() {
+        String[] gameConfig = new String[] {"8", "B", "34 43", "33 44", "33 44"};
         Reversi game = rev;
         game.initGame(gameConfig);
 
@@ -418,8 +437,35 @@ public class ReversiTest {
     }
 
     @Test
-    public void testInitGameFourLines() {
-        String[] gameConfig = new String[] {"B", "E4 D5", "D4 E5", "E4 D5"};
+    public void testInitGameAlpha() {
+        String[] gameConfig = new String[] {"8", "B", "E4 D5", "D4 E5"};
+        Reversi game = rev;
+        game.initGame(gameConfig);
+
+        assertArrayEquals(getEmptyPlayground(), game.playground);
+    }
+
+    @Test
+    public void testInitGameNoSize() {
+        String[] gameConfig = new String[] {"B", "34 43", "33 44"};
+        Reversi game = rev;
+        game.initGame(gameConfig);
+
+        assertArrayEquals(null, game.playground);
+    }
+
+    @Test
+    public void testInitGameNoOnTurn() {
+        String[] gameConfig = new String[] {"8", "34 43", "33 44"};
+        Reversi game = rev;
+        game.initGame(gameConfig);
+
+        assertArrayEquals(null, game.playground);
+    }
+
+    @Test
+    public void testInitGameNoTiles() {
+        String[] gameConfig = new String[] {"8", "B"};
         Reversi game = rev;
         game.initGame(gameConfig);
 
@@ -434,21 +480,12 @@ public class ReversiTest {
         assertArrayEquals(null, game.playground);
     }
 
-    @Test
-    public void testInitGameOnlyB() {
-        String[] gameConfig = new String[] {"B", "E4 D5"};
-        Reversi game = rev;
-        game.initGame(gameConfig);
-
-        assertArrayEquals(null, game.playground);
-    }
-
 
     // initTilesCount
 
     @Test
     public void testInitTilesCountInit() {
-        String[] gameConfig = new String[] {"B", "E4 D5", "D4 E5"};
+        String[] gameConfig = new String[] {"8", "B", "34 43", "33 44"};
         Reversi game = initReversi(gameConfig);
         game.initTilesCount();
 
@@ -469,16 +506,17 @@ public class ReversiTest {
 
     @Test
     public void testGetLeftB() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
 
         assertEquals("left Bs on initial game config", 2, game.getLeftB());
     }
+
 
     // getLeftW
 
     @Test
     public void testGetLeftW() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
 
         assertEquals("left Ws on initial game config", 2, game.getLeftW());
     }
@@ -487,14 +525,42 @@ public class ReversiTest {
     // Reversi
 
     @Test
-    public void testInit() {
-        Reversi game = new Reversi(gameInitBStarts);
+    public void test8bInit() {
+        Reversi game = new Reversi(game8bInit);
 
         assertEquals("on turn player on initial game config", Player.B, game.onTurn);
-        assertEquals("playground on initial game config", Player.W, getTile(game, Alpha.D, 4));
-        assertEquals("playground on initial game config", Player.B, getTile(game, Alpha.E, 4));
-        assertEquals("playground on initial game config", Player.B, getTile(game, Alpha.D, 5));
-        assertEquals("playground on initial game config", Player.W, getTile(game, Alpha.E, 5));
+        assertEquals("size on initial game config", 8, game.size);
+        assertEquals("playground on initial game config", Player.B, getTile(game, 3, 4));
+        assertEquals("playground on initial game config", Player.B, getTile(game, 4, 3));
+        assertEquals("playground on initial game config", Player.W, getTile(game, 3, 3));
+        assertEquals("playground on initial game config", Player.W, getTile(game, 4, 4));
+        assertEquals("left Bs on initial game config", 2, game.getLeftB());
+        assertEquals("left Ws on initial game config", 2, game.getLeftW());
+    }
+
+    @Test
+    public void test8wInit() {
+        Reversi game = new Reversi(game8wInit);
+
+        assertEquals("on turn player on initial game config", Player.W, game.onTurn);
+        assertEquals("size on initial game config", 8, game.size);
+        assertEquals("playground on initial game config", Player.B, getTile(game, 3, 4));
+        assertEquals("playground on initial game config", Player.B, getTile(game, 4, 3));
+        assertEquals("playground on initial game config", Player.W, getTile(game, 3, 3));
+        assertEquals("playground on initial game config", Player.W, getTile(game, 4, 4));
+        assertEquals("left Bs on initial game config", 2, game.getLeftB());
+        assertEquals("left Ws on initial game config", 2, game.getLeftW());
+    }
+
+    @Test
+    public void test10bInit() {
+        Reversi game = new Reversi(game10bInit);
+
+        assertEquals("on turn player on initial game config", Player.B, game.onTurn);
+        assertEquals("playground on initial game config", Player.B, getTile(game, 4, 5));
+        assertEquals("playground on initial game config", Player.B, getTile(game, 5, 4));
+        assertEquals("playground on initial game config", Player.W, getTile(game, 4, 4));
+        assertEquals("playground on initial game config", Player.W, getTile(game, 5, 5));
         assertEquals("left Bs on initial game config", 2, game.getLeftB());
         assertEquals("left Ws on initial game config", 2, game.getLeftW());
     }
@@ -510,8 +576,8 @@ public class ReversiTest {
     }
 
     @Test
-    public void testOneLine() {
-        Reversi game = new Reversi(gameOneLine);
+    public void testNotExisting() {
+        Reversi game = new Reversi(gameNotExisting);
 
         assertArrayEquals(null, game.playground);
         assertEquals(Player.NONE, game.onTurn);
@@ -520,8 +586,8 @@ public class ReversiTest {
     }
 
     @Test
-    public void testFourLines() {
-        Reversi game = new Reversi(gameFourLines);
+    public void testFiveLines() {
+        Reversi game = new Reversi(gameFiveLines);
 
         assertArrayEquals(null, game.playground);
         assertEquals(Player.NONE, game.onTurn);
@@ -530,21 +596,20 @@ public class ReversiTest {
     }
 
     @Test
-    public void testAllNum() {
-        Reversi game = new Reversi(gameAllNum);
+    public void testAlpha() {
+        Reversi game = new Reversi(gameAlpha);
 
         assertArrayEquals(getEmptyPlayground(), game.playground);
-        assertEquals(Player.B, game.onTurn);
         assertFalse(game.ended);
         assertEquals(Player.NONE, game.winner);
     }
 
     @Test
-    public void testAllAlpha() {
-        Reversi game = new Reversi(gameAllAlpha);
+    public void testNoSize() {
+        Reversi game = new Reversi(gameNoSize);
 
-        assertArrayEquals(getEmptyPlayground(), game.playground);
-        assertEquals(Player.B, game.onTurn);
+        assertArrayEquals(null, game.playground);
+        assertEquals(Player.NONE, game.onTurn);
         assertFalse(game.ended);
         assertEquals(Player.NONE, game.winner);
     }
@@ -559,63 +624,57 @@ public class ReversiTest {
         assertEquals(Player.NONE, game.winner);
     }
 
+    @Test
+    public void testNoTiles() {
+        Reversi game = new Reversi(gameNoTiles);
 
-    // printPlayground
-
-//    @Test
-//    public void testPrintPlaygroundInit() {
-//        /// ?
-//    }
-
-
-    // printTilesLeftCount
-
-//    @Test
-//    public void testprintTilesLeftCountInit() {
-//        /// ?
-//    }
-
+        assertArrayEquals(null, game.playground);
+        assertEquals(Player.NONE, game.onTurn);
+        assertFalse(game.ended);
+        assertEquals(Player.NONE, game.winner);
+    }
 
     // isWithinPlayground
 
     @Test
     public void testIsWithinPlayground00() {
         Reversi game = rev;
+        game.size = 8;
 
         assertTrue("within playground (0, 0)", game.isWithinPlayground(0, 0));
     }
 
     @Test
     public void testIsWithinPlayground77() {
-        Reversi game = rev;
+        Reversi game = new Reversi(game8bInit);
 
         assertTrue("within playground (7, 7)", game.isWithinPlayground(7, 7));
     }
 
     @Test
-    public void testIsWithinPlaygroundNegR() {
-        Reversi game = rev;
+    public void testIsWithinPlaygroundNeg10() {
+        Reversi game = new Reversi(game8bInit);
 
         assertFalse("within playground (-1, 0)", game.isWithinPlayground(-1, 0));
     }
 
     @Test
-    public void testIsWithinPlaygroundNegC() {
-        Reversi game = rev;
+    public void testIsWithinPlayground0Neg1() {
+        Reversi game = new Reversi(game8bInit);
 
         assertFalse("within playground (0, -1)", game.isWithinPlayground(0, -1));
     }
 
     @Test
-    public void testIsWithinPlaygroundLargeR() {
-        Reversi game = rev;
+    public void testIsWithinPlayground80() {
+        Reversi game = new Reversi(game8bInit);
 
         assertFalse("within playground (8, 0)", game.isWithinPlayground(8, 0));
     }
 
     @Test
-    public void testIsWithinPlaygroundLargeC() {
-        Reversi game = rev;
+    public void testIsWithinPlayground08() {
+        Reversi game = new Reversi(game8bInit);
 
         assertFalse("within playground (0, 8)", game.isWithinPlayground(0, 8));
     }
@@ -625,14 +684,14 @@ public class ReversiTest {
 
     @Test
     public void testIsEmptyInit00() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
 
         assertTrue("is empty (0, 0) on init", game.isEmpty(0, 0));
     }
 
     @Test
     public void testIsEmptyInit33() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
 
         assertFalse("is empty (3, 3) on init", game.isEmpty(3, 3));
     }
@@ -642,14 +701,14 @@ public class ReversiTest {
 
     @Test
     public void testIsGameOverInit() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
 
         assertFalse("is game over on init", game.isGameOver());
     }
 
     @Test
     public void testIsGameOverOnEnd() {
-        Reversi game = new Reversi(gameComplete);
+        Reversi game = new Reversi(game8bComplete);
         assertFalse("is game over on init", game.isGameOver());
     }
 
@@ -658,22 +717,22 @@ public class ReversiTest {
 
     @Test
     public void testGetTilesToFlipInit32() {
-        Reversi game = new Reversi(gameInitBStarts);
-        ArrayList<List<Integer>> tiles = game.getTilesToFlip(3, 2);
-        ArrayList<List<Integer>> expected = new ArrayList<>();
-        expected.add(Arrays.asList(3, 3));
-        expected.add(Arrays.asList(3, 2));
+        Reversi game = new Reversi(game8bInit);
+        List<List<Integer>> tiles = game.getTilesToFlip(3, 2);
+        List<List<Integer>> expected = new ArrayList<>();
+        expected.add(List.of(3, 3));
+        expected.add(List.of(3, 2));
 
         assertEquals("tiles to flip on onit - (3, 2)", 2, tiles.size());
-        assertEquals("...", expected.get(0).get(0), tiles.get(0).get(0));
-        assertEquals("...", expected.get(0).get(1), tiles.get(0).get(1));
-        assertEquals("...", expected.get(1).get(0), tiles.get(1).get(0));
-        assertEquals("...", expected.get(1).get(1), tiles.get(1).get(1));
+        assertEquals(expected.get(0).get(0), tiles.get(0).get(0));
+        assertEquals(expected.get(0).get(1), tiles.get(0).get(1));
+        assertEquals(expected.get(1).get(0), tiles.get(1).get(0));
+        assertEquals(expected.get(1).get(1), tiles.get(1).get(1));
     }
 
     @Test
     public void testGetTilesToFlipInit00() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
         ArrayList<List<Integer>> tiles = game.getTilesToFlip(0, 0);
 
         assertEquals("tiles to flip on onit - (0, 0)", 0, tiles.size());
@@ -684,28 +743,28 @@ public class ReversiTest {
 
     @Test
     public void testFlipTiles() {
-        Reversi game = new Reversi(gameInitBStarts);
-        ArrayList<List<Integer>> tiles = new ArrayList<>();
+        Reversi game = new Reversi(game8bInit);
+        List<List<Integer>> tiles = new ArrayList<>();
         tiles.add(Arrays.asList(3, 3));
         tiles.add(Arrays.asList(3, 2));
         game.flipTiles(tiles);
 
-        assertEquals("...", Player.B, getTile(game, Alpha.C, 4));
-        assertEquals("...", Player.B, getTile(game, Alpha.D, 4));
+        assertEquals("...", Player.B, getTile(game, 3, 3));
+        assertEquals("...", Player.B, getTile(game, 3, 2));
     }
 
     // getPossibleMoves
 
     @Test
-    public void testGetPossibleMovesEmptyInit() {
-        Reversi game = new Reversi(gameInitBStarts);
+    public void testGetPossibleMoves8bInit() {
+        Reversi game = new Reversi(game8bInit);
         ArrayList<String> tiles = game.getPossibleMoves();
 
         assertEquals("valid length", 4, tiles.size());
-        assertEquals("valid moves", "D3", tiles.get(0));
-        assertEquals("valid moves", "C4", tiles.get(1));
-        assertEquals("valid moves", "F5", tiles.get(2));
-        assertEquals("valid moves", "E6", tiles.get(3));
+        assertEquals("valid moves", "32", tiles.get(0));
+        assertEquals("valid moves", "23", tiles.get(1));
+        assertEquals("valid moves", "54", tiles.get(2));
+        assertEquals("valid moves", "45", tiles.get(3));
     }
 
     @Test
@@ -721,16 +780,16 @@ public class ReversiTest {
 
     @Test
     public void testAreValidMovesInit() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
 
-        assertTrue("...", game.areValidMoves());
+        assertTrue(game.areValidMoves());
     }
 
     @Test
     public void testAreValidMovesOnEnd() {
-        Reversi game = new Reversi(gameComplete);
+        Reversi game = new Reversi(game8bComplete);
 
-        assertFalse("...", game.areValidMoves());
+        assertFalse(game.areValidMoves());
     }
 
 
@@ -738,29 +797,30 @@ public class ReversiTest {
 
     @Test
     public void testSwapPlayerOnTurnBtoW() {
-        Reversi game = new Reversi(gameInitBStarts);
+        Reversi game = new Reversi(game8bInit);
         game.swapPlayerOnTurn();
 
-        assertEquals("...", Player.W, game.onTurn);
+        assertEquals(Player.W, game.onTurn);
     }
 
     @Test
     public void testSwapPlayerOnTurnWtoB() {
-        Reversi game = new Reversi(gameInitWStarts);
+        Reversi game = new Reversi(game8wInit);
         game.swapPlayerOnTurn();
 
-        assertEquals("...", Player.B, game.onTurn);
+        assertEquals(Player.B, game.onTurn);
     }
+
 
     // endGame
 
     @Test
     public void testEndGame() {
-        Reversi game = new Reversi(gameComplete);
+        Reversi game = new Reversi(game8bComplete);
         game.endGame();
 
-        assertTrue("...", game.ended);
-        assertEquals("...", Player.B, game.winner);
+        assertTrue(game.ended);
+        assertEquals(Player.B, game.winner);
     }
 
 
@@ -768,43 +828,43 @@ public class ReversiTest {
 
     @Test
     public void testMoveOnNotEmpty() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.E,5);
+        Reversi game = new Reversi(game8bInit);
+        game.move(4, 4);
 
         assertArrayEquals("check if didn't change", getInitPlayground(), game.playground);
     }
 
     @Test
     public void testMoveOutOfBoundsBelow() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.A,9);
+        Reversi game = new Reversi(game8bInit);
+        game.move(8, 0);
 
         assertArrayEquals("check if didn't change", getInitPlayground(), game.playground);
     }
 
     @Test
     public void testMoveOutOfBoundsAbove() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.A,0);
+        Reversi game = new Reversi(game8bInit);
+        game.move(-1, 0);
 
         assertArrayEquals("check if didn't change", getInitPlayground(), game.playground);
     }
 
     @Test
     public void testMoveOnNotAdjacent() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.A,1);
+        Reversi game = new Reversi(game8bInit);
+        game.move(0, 0);
 
         assertArrayEquals("check if didn't change", getInitPlayground(), game.playground);
     }
 
     @Test
     public void testMoveFlipRight() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.C,4);
+        Reversi game = new Reversi(game8bInit);
+        game.move(3, 2);
 
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.D, 4));
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.C, 4));
+        assertEquals("check if flipped", Player.B, getTile(game, 3, 3));
+        assertEquals("check if flipped", Player.B, getTile(game, 3, 2));
         assertEquals("on turn", Player.W, game.onTurn);
         assertEquals("W left", 1, game.getLeftW());
         assertEquals("B left", 4, game.getLeftB());
@@ -812,11 +872,11 @@ public class ReversiTest {
 
     @Test
     public void testMoveFlipUp() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.E, 6);
+        Reversi game = new Reversi(game8bInit);
+        game.move(5, 4);
 
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.E, 5));
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.E, 6));
+        assertEquals("check if flipped", Player.B, getTile(game,4, 4));
+        assertEquals("check if flipped", Player.B, getTile(game, 5, 4));
         assertEquals("on turn", Player.W, game.onTurn);
         assertEquals("W left", 1, game.getLeftW());
         assertEquals("B left", 4, game.getLeftB());
@@ -824,11 +884,11 @@ public class ReversiTest {
 
     @Test
     public void testMoveFlipLeft() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.F, 5);
+        Reversi game = new Reversi(game8bInit);
+        game.move(4, 5);
 
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.E, 5));
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.F, 5));
+        assertEquals("check if flipped", Player.B, getTile(game, 4, 4));
+        assertEquals("check if flipped", Player.B, getTile(game, 4, 5));
         assertEquals("on turn", Player.W, game.onTurn);
         assertEquals("W left", 1, game.getLeftW());
         assertEquals("B left", 4, game.getLeftB());
@@ -836,11 +896,11 @@ public class ReversiTest {
 
     @Test
     public void testMoveFlipDown() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.move(Alpha.D, 3);
+        Reversi game = new Reversi(game8bInit);
+        game.move(2, 3);
 
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.D, 4));
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.D, 3));
+        assertEquals("check if flipped", Player.B, getTile(game, 3, 3));
+        assertEquals("check if flipped", Player.B, getTile(game, 2, 3));
         assertEquals("on turn", Player.W, game.onTurn);
         assertEquals("W left", 1, game.getLeftW());
         assertEquals("B left", 4, game.getLeftB());
@@ -848,14 +908,14 @@ public class ReversiTest {
 
     @Test
     public void testMoveFlipRightUp() {
-        ArrayList<Pair<Alpha, Integer>> moves = new ArrayList<>();
-        moves.add(new Pair<>(Alpha.E, 6));
-        moves.add(new Pair<>(Alpha.D, 6));
-        moves.add(new Pair<>(Alpha.C, 7));
+        ArrayList<Pair<Integer, Integer>> moves = new ArrayList<>();
+        moves.add(new Pair<>(5, 4));
+        moves.add(new Pair<>(5, 3));
+        moves.add(new Pair<>(6, 2));
         Reversi game = setMoves(moves);
 
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.D, 6));
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.C, 7));
+        assertEquals("check if flipped", Player.B, getTile(game, 5, 3));
+        assertEquals("check if flipped", Player.B, getTile(game, 6, 2));
         assertEquals("on turn", Player.W, game.onTurn);
         assertEquals("W left", 2, game.getLeftW());
         assertEquals("B left", 5, game.getLeftB());
@@ -863,13 +923,13 @@ public class ReversiTest {
 
     @Test
     public void testMoveFlipLeftUp() {
-        ArrayList<Pair<Alpha, Integer>> moves = new ArrayList<>();
-        moves.add(new Pair<>(Alpha.E, 6));
-        moves.add(new Pair<>(Alpha.F, 6));
+        ArrayList<Pair<Integer, Integer>> moves = new ArrayList<>();
+        moves.add(new Pair<>(5, 4));
+        moves.add(new Pair<>(5, 5));
         Reversi game = setMoves(moves);
 
-        assertEquals("check if flipped", Player.W, getTile(game, Alpha.E, 5));
-        assertEquals("check if flipped", Player.W, getTile(game, Alpha.F, 6));
+        assertEquals("check if flipped", Player.W, getTile(game, 4, 4));
+        assertEquals("check if flipped", Player.W, getTile(game, 5, 5));
         assertEquals("on turn", Player.B, game.onTurn);
         assertEquals("W left", 3, game.getLeftW());
         assertEquals("B left", 3, game.getLeftB());
@@ -877,14 +937,14 @@ public class ReversiTest {
 
     @Test
     public void testMoveFlipLeftDown() {
-        ArrayList<Pair<Alpha, Integer>> moves = new ArrayList<>();
-        moves.add(new Pair<>(Alpha.D, 3));
-        moves.add(new Pair<>(Alpha.E, 3));
-        moves.add(new Pair<>(Alpha.F, 2));
+        ArrayList<Pair<Integer, Integer>> moves = new ArrayList<>();
+        moves.add(new Pair<>(2, 3));
+        moves.add(new Pair<>(2, 4));
+        moves.add(new Pair<>(1, 5));
         Reversi game = setMoves(moves);
 
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.E, 3));
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.F, 2));
+        assertEquals("check if flipped", Player.B, getTile(game, 2, 4));
+        assertEquals("check if flipped", Player.B, getTile(game, 1, 5));
         assertEquals("on turn", Player.W, game.onTurn);
         assertEquals("W left", 2, game.getLeftW());
         assertEquals("B left", 5, game.getLeftB());
@@ -892,13 +952,13 @@ public class ReversiTest {
 
     @Test
     public void testMoveFlipRightDown() {
-        ArrayList<Pair<Alpha, Integer>> moves = new ArrayList<>();
-        moves.add(new Pair<>(Alpha.D, 3));
-        moves.add(new Pair<>(Alpha.C, 3));
+        ArrayList<Pair<Integer, Integer>> moves = new ArrayList<>();
+        moves.add(new Pair<>(2, 3));
+        moves.add(new Pair<>(2, 2));
         Reversi game = setMoves(moves);
 
-        assertEquals("check if flipped", Player.W, getTile(game, Alpha.D, 4));
-        assertEquals("check if flipped", Player.W, getTile(game, Alpha.C, 3));
+        assertEquals("check if flipped", Player.W, getTile(game, 3, 3));
+        assertEquals("check if flipped", Player.W, getTile(game, 2, 2));
         assertEquals("on turn", Player.B, game.onTurn);
         assertEquals("W left", 3, game.getLeftW());
         assertEquals("B left", 3, game.getLeftB());
@@ -906,63 +966,63 @@ public class ReversiTest {
 
     @Test
     public void testMoveDoubleFlip() {
-        ArrayList<Pair<Alpha, Integer>> moves = new ArrayList<>();
-        moves.add(new Pair<>(Alpha.D, 3));
-        moves.add(new Pair<>(Alpha.C, 3));
-        moves.add(new Pair<>(Alpha.C, 4));
-        moves.add(new Pair<>(Alpha.E, 3));
+        ArrayList<Pair<Integer, Integer>> moves = new ArrayList<>();
+        moves.add(new Pair<>(2, 3));
+        moves.add(new Pair<>(2, 2));
+        moves.add(new Pair<>(3, 2));
+        moves.add(new Pair<>(2, 4));
         Reversi game = setMoves(moves);
 
-        assertEquals("check if flipped (D,3) correctly", Player.W, getTile(game, Alpha.D, 3));
-        assertEquals("check if flipped (E,4) correctly", Player.W, getTile(game, Alpha.E, 4));
+        assertEquals("check if flipped (D,3) correctly", Player.W, getTile(game, 2, 3));
+        assertEquals("check if flipped (E,4) correctly", Player.W, getTile(game, 3, 4));
         assertEquals("W left", 5, game.getLeftW());
         assertEquals("B left", 3, game.getLeftB());
     }
 
     @Test
     public void testMoveFinishGame() {
-        Reversi game = new Reversi(gameAlmostComplete);
-        game.move(Alpha.G, 7);
+        Reversi game = new Reversi(game8bAlmostComplete);
+        game.move(3, 4);
 
         assertFalse("if the are valid moves", game.areValidMoves());
-        assertEquals("W left", 28, game.getLeftW());
-        assertEquals("B left", 36, game.getLeftB());
-        assertEquals("winner", Player.B, game.winner);
+        assertEquals("W left", 39, game.getLeftW());
+        assertEquals("B left", 25, game.getLeftB());
+        assertEquals("winner", Player.W, game.winner);
     }
 
     @Test
     public void testMovesCompleteGame() {
-        ArrayList<Pair<Alpha, Integer>> moves = new ArrayList<>();
-        moves.add(new Pair<>(Alpha.E, 6)); moves.add(new Pair<>(Alpha.F, 4));
-        moves.add(new Pair<>(Alpha.D, 3)); moves.add(new Pair<>(Alpha.C, 4));
-        moves.add(new Pair<>(Alpha.C, 3)); moves.add(new Pair<>(Alpha.D, 6));
-        moves.add(new Pair<>(Alpha.E, 3)); moves.add(new Pair<>(Alpha.C, 2));
-        moves.add(new Pair<>(Alpha.B, 3)); moves.add(new Pair<>(Alpha.F, 5));
-        moves.add(new Pair<>(Alpha.F, 3)); moves.add(new Pair<>(Alpha.D, 2));
-        moves.add(new Pair<>(Alpha.E, 2)); moves.add(new Pair<>(Alpha.B, 4));
-        moves.add(new Pair<>(Alpha.C, 5)); moves.add(new Pair<>(Alpha.F, 1));
-        moves.add(new Pair<>(Alpha.A, 3)); moves.add(new Pair<>(Alpha.F, 2));
-        moves.add(new Pair<>(Alpha.C, 6)); moves.add(new Pair<>(Alpha.F, 6));
-        moves.add(new Pair<>(Alpha.G, 6)); moves.add(new Pair<>(Alpha.A, 5));
-        moves.add(new Pair<>(Alpha.B, 5)); moves.add(new Pair<>(Alpha.A, 6));
-        moves.add(new Pair<>(Alpha.G, 5)); moves.add(new Pair<>(Alpha.C, 7));
-        moves.add(new Pair<>(Alpha.G, 3)); moves.add(new Pair<>(Alpha.D, 7));
-        moves.add(new Pair<>(Alpha.E, 7)); moves.add(new Pair<>(Alpha.H, 4));
-        moves.add(new Pair<>(Alpha.D, 8)); moves.add(new Pair<>(Alpha.G, 4));
-        moves.add(new Pair<>(Alpha.A, 4)); moves.add(new Pair<>(Alpha.A, 2));
-        moves.add(new Pair<>(Alpha.H, 2)); moves.add(new Pair<>(Alpha.H, 3));
-        moves.add(new Pair<>(Alpha.H, 5)); moves.add(new Pair<>(Alpha.B, 6));
-        moves.add(new Pair<>(Alpha.C, 8)); moves.add(new Pair<>(Alpha.F, 7));
-        moves.add(new Pair<>(Alpha.E, 8)); moves.add(new Pair<>(Alpha.B, 7));
-        moves.add(new Pair<>(Alpha.C, 1)); moves.add(new Pair<>(Alpha.H, 6));
-        moves.add(new Pair<>(Alpha.H, 7)); moves.add(new Pair<>(Alpha.D, 1));
-        moves.add(new Pair<>(Alpha.A, 8)); moves.add(new Pair<>(Alpha.B, 1));
-        moves.add(new Pair<>(Alpha.A, 7)); moves.add(new Pair<>(Alpha.F, 8));
-        moves.add(new Pair<>(Alpha.G, 2)); moves.add(new Pair<>(Alpha.H, 1));
-        moves.add(new Pair<>(Alpha.G, 1)); moves.add(new Pair<>(Alpha.H, 8));
-        moves.add(new Pair<>(Alpha.E, 1)); moves.add(new Pair<>(Alpha.B, 8));
-        moves.add(new Pair<>(Alpha.A, 1)); moves.add(new Pair<>(Alpha.B, 2));
-        moves.add(new Pair<>(Alpha.G, 8)); moves.add(new Pair<>(Alpha.G, 7));
+        ArrayList<Pair<Integer, Integer>> moves = new ArrayList<>();
+        moves.add(new Pair<>(4, 5)); moves.add(new Pair<>(5, 3));
+        moves.add(new Pair<>(3, 2)); moves.add(new Pair<>(2, 3));
+        moves.add(new Pair<>(2, 2)); moves.add(new Pair<>(3, 5));
+        moves.add(new Pair<>(4, 2)); moves.add(new Pair<>(2, 1));
+        moves.add(new Pair<>(1, 2)); moves.add(new Pair<>(5, 4));
+        moves.add(new Pair<>(5, 2)); moves.add(new Pair<>(3, 1));
+        moves.add(new Pair<>(4, 1)); moves.add(new Pair<>(1, 3));
+        moves.add(new Pair<>(2, 4)); moves.add(new Pair<>(5, 0));
+        moves.add(new Pair<>(0, 2)); moves.add(new Pair<>(5, 1));
+        moves.add(new Pair<>(2, 5)); moves.add(new Pair<>(5, 5));
+        moves.add(new Pair<>(6, 5)); moves.add(new Pair<>(0, 4));
+        moves.add(new Pair<>(1, 4)); moves.add(new Pair<>(0, 5));
+        moves.add(new Pair<>(6, 4)); moves.add(new Pair<>(2, 6));
+        moves.add(new Pair<>(6, 2)); moves.add(new Pair<>(3, 6));
+        moves.add(new Pair<>(4, 6)); moves.add(new Pair<>(7, 3));
+        moves.add(new Pair<>(3, 7)); moves.add(new Pair<>(6, 3));
+        moves.add(new Pair<>(0, 3)); moves.add(new Pair<>(0, 1));
+        moves.add(new Pair<>(7, 1)); moves.add(new Pair<>(7, 2));
+        moves.add(new Pair<>(7, 4)); moves.add(new Pair<>(1, 5));
+        moves.add(new Pair<>(2, 7)); moves.add(new Pair<>(5, 6));
+        moves.add(new Pair<>(4, 7)); moves.add(new Pair<>(1, 6));
+        moves.add(new Pair<>(2, 0)); moves.add(new Pair<>(7, 5));
+        moves.add(new Pair<>(7, 6)); moves.add(new Pair<>(3, 0));
+        moves.add(new Pair<>(0, 7)); moves.add(new Pair<>(1, 0));
+        moves.add(new Pair<>(0, 6)); moves.add(new Pair<>(5, 7));
+        moves.add(new Pair<>(6, 1)); moves.add(new Pair<>(7, 0));
+        moves.add(new Pair<>(6, 0)); moves.add(new Pair<>(7, 7));
+        moves.add(new Pair<>(4, 0)); moves.add(new Pair<>(1, 7));
+        moves.add(new Pair<>(0, 0)); moves.add(new Pair<>(1, 1));
+        moves.add(new Pair<>(6, 7)); moves.add(new Pair<>(6, 6));
         Reversi game = setMoves(moves);
 
         assertFalse("if the are valid moves", game.areValidMoves());
@@ -976,47 +1036,47 @@ public class ReversiTest {
 
     @Test
     public void testExecute() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.execute("C4");
+        Reversi game = new Reversi(game8bInit);
+        game.execute("32");
 
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.D, 4));
-        assertEquals("check if flipped", Player.B, getTile(game, Alpha.C, 4));
+        assertEquals("check if flipped", Player.B, getTile(game, 3, 3));
+        assertEquals("check if flipped", Player.B, getTile(game, 3, 2));
         assertEquals("on turn", Player.W, game.onTurn);
         assertEquals("W left", 1, game.getLeftW());
         assertEquals("B left", 4, game.getLeftB());
     }
 
     @Test
-    public void testExecuteA1() {
-        Reversi game = new Reversi(gameInitBStarts);
-        game.execute("A1");
+    public void testExecute00() {
+        Reversi game = new Reversi(game8bInit);
+        game.execute("00");
 
         assertArrayEquals("check if didn't change", getInitPlayground(), game.playground);
     }
 
     @Test
     public void testFinishGame() {
-        Reversi game = new Reversi(gameAlmostComplete);
-        game.execute("G7");
+        Reversi game = new Reversi(game8bAlmostComplete);
+        game.execute("34");
 
         assertFalse("if the are valid moves", game.areValidMoves());
-        assertEquals("W left", 28, game.getLeftW());
-        assertEquals("B left", 36, game.getLeftB());
-        assertEquals("winner", Player.B, game.winner);
+        assertEquals("W left", 39, game.getLeftW());
+        assertEquals("B left", 25, game.getLeftB());
+        assertEquals("winner", Player.W, game.winner);
     }
 
 
     // utility functions
 
-    private Player getTile(Reversi game, Alpha c0, int r0) {
-        return game.playground[r0-1][c0.getValue()];
+    private Player getTile(Reversi game, int r0, int c0) {
+        return game.playground[r0][c0];
     }
 
 
-    private Reversi setMoves(ArrayList<Pair<Alpha, Integer>> moves) {
-        Reversi game = new Reversi(gameInitBStarts);
-        for (Pair<Alpha, Integer> move  : moves) {
-            Alpha r = move.getKey();
+    private Reversi setMoves(ArrayList<Pair<Integer, Integer>> moves) {
+        Reversi game = new Reversi(game8bInit);
+        for (Pair<Integer, Integer> move  : moves) {
+            Integer r = move.getKey();
             Integer c = move.getValue();
             game.move(r, c);
         }
@@ -1031,7 +1091,7 @@ public class ReversiTest {
 
     private Reversi getRevWithPlayground() {
         Reversi rev = new Reversi();
-        rev.createPlayground();
+        rev.playground = getEmptyPlayground();
         return rev;
     }
 
